@@ -6,8 +6,8 @@ import com.example.mingle.domain.chat.archive.entity.ArchiveTag;
 import com.example.mingle.domain.chat.archive.repository.ArchiveItemRepository;
 import com.example.mingle.domain.chat.archive.repository.ArchiveTagRepository;
 import com.example.mingle.domain.chat.common.util.ChatUtil;
-import com.example.mingle.domain.user.user.repository.UserRepository;
 import com.example.mingle.domain.user.user.entity.User;
+import com.example.mingle.domain.user.user.repository.UserRepository;
 import com.example.mingle.global.aws.AwsS3Uploader;
 import com.example.mingle.global.exception.ApiException;
 import com.example.mingle.global.exception.ErrorCode;
@@ -18,6 +18,7 @@ import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -63,12 +64,12 @@ public class ArchiveUploadServiceImpl implements ArchiveUploadService {
 
         // 추출된 태그가 존재하면 ArchiveTag로 변환 후 연결
         if (!tags.isEmpty()) {
-            List<ArchiveTag> tagEntities = tags.stream()
+            List<ArchiveTag> tagEntities = (List<ArchiveTag>) tags.stream()
                     .map(tagName -> ArchiveTag.builder()
                             .name(tagName)
                             .archiveItem(archiveItem)
                             .build())
-                    .toList();
+                    .collect(Collectors.toList());
             archiveItem.getTags().addAll(tagEntities);
         }
 
